--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "pragmarx/google2fa-laravel": "^1.4",
         "rachidlaasri/laravel-installer": "^4.1",
         "spatie/laravel-permission": "^4.2",
+        "tinymce/tinymce": "^7.1",
         "yajra/laravel-datatables": "^1.5"
     },
     "require-dev": {
