--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "barryvdh/laravel-dompdf": "^2.2",
         "brian2694/laravel-toastr": "^5.56",
         "doctrine/dbal": "~2.3",
         "fideloper/proxy": "^4.4",
